# ruks-data

./: .gitignore  README.md  TODO.md  _quarto.yml  credits.qmd  index.qmd  methodology.qmd  pyproject.toml  styles.css  usage.qmd
.github/workflows/: update_ruks.yml
data/history/: releases.csv
data/manifests/: latest.json  ruks-2025-11-28.json
docs/: TODO.html  credits.html  index.html  methodology.html  search.json  usage.html
docs/site/data/: latest-summary.json
docs/site_libs/bootstrap/: bootstrap-11e654f069ceca6601e7038be5bafdcb.min.css
scripts/: run_pipeline.py  smoke_test.py
src/ruks_data/: __init__.py  pipeline.py
